// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip/presenters/PanelPresenter  1`] = `
.emotion-1 {
  border: 1px solid #535353;
  background-color: #535353;
  border-radius: 2px;
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`tooltip/presenters/PanelPresenter  2`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  border: 1px solid #535353;
  background-color: #535353;
  border-radius: 2px;
  max-height: 42px;
}

<div
  className="emotion-1"
  onScroll={[Function]}
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</div>
`;

exports[`tooltip/presenters/PanelPresenter renders with all props 1`] = `
.emotion-0 {
  position: relative;
}

.emotion-1 {
  border: 1px solid #535353;
  background-color: #535353;
  border-radius: 2px;
  max-height: 42px;
}

<div
  className="emotion-1"
  onScroll={[Function]}
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</div>
`;

exports[`tooltip/presenters/PanelPresenter renders without props 1`] = `
.emotion-1 {
  border: 1px solid #535353;
  background-color: #535353;
  border-radius: 2px;
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;
